# Matriad

./: .gitignore  Cargo.toml  LICENSE.md  README.md  test_source.mrd
.cargo/: config.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: rust.yml
benches/: bench.rs
src/: corul.rs  lexer.rs  main.rs  matriad.rs  test.rs
src/corul/: lexer.rs  message.rs  token.rs
src/language/: lexer.rs  message.rs  util.rs
src/matriad/: config.rs  lexer.rs  lexthrow.rs  message.rs  token.rs  util.rs
