[package]
name = "language"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
crossterm = "^0.22.1"

[dev-dependencies]
criterion = "^0.3.5"

[profile.release]
debug = true
lto = "fat"
# codegen-units = 1
# lowers size of file and may lower performance but can cause problems with some libraries
# panic = "abort"

[[bench]]
name = "bench"
harness = false
