[package]
name    = "matriad"
version = "0.1.0"
edition = "2021"
# email = "user.some1@outlook.com"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.0" # cross platform terminal-interaction library

[profile.release]
# Mess with `lto`, `codegen-units` and `panic` settings.
# They sometimes cause performance improvements when enabled or disabled

lto           = "fat" # link-time optimization, slow build time, and marginal peformance improvements
codegen-units = 1 # increases the performance marginally on my device?
# lowers size of file and may change performance but can cause problems with some libraries
panic         = "abort" # improves performance now?